@@ -31,11 +31,6 @@
 
     <properties>
         <acts.bom>1.0.0</acts.bom>
-        <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
-        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-        <sonar.jacoco.itReportPath>target/jacoco-it.exec</sonar.jacoco.itReportPath> 
-        <sonar.jacoco.reportPath>target/jacoco-ut.exec</sonar.jacoco.reportPath> 
-        <jacoco.path>${project.build.directory}/jacoco-ut.exec</jacoco.path>
         <jacoco.skip>false</jacoco.skip>
         <license.maven.plugin>3.0</license.maven.plugin>
         <project.encoding>UTF-8</project.encoding>
@@ -175,11 +170,6 @@
             </dependency>
 
             <dependency>
-                <groupId>com.oracle</groupId>
-                <artifactId>ojdbc6</artifactId>
-                <version>11.2.0.3</version>
-            </dependency>
-            <dependency>
                 <groupId>org.azeckoski</groupId>
                 <artifactId>reflectutils</artifactId>
                 <version>0.9.20</version>
@@ -245,8 +235,9 @@
                     <includes>
                         <include>**/src/main/java/com/alipay/test/**</include>
                         <include>**/src/test/java/com/alipay/test/**</include>
-                        <include>**/src/test/java/com/demo/poc/accountcenter/**</include>
-                        <include>**/src/main/java/com/demo/poc/accountcenter/**</include>
+                        <include>**/src/test/java/com/alipay/sample/**</include>
+                        <include>**/src/main/java/com//alipay/sofa/**</include>
+                        <include>**/src/test/java/com//alipay/sofa/**</include>
                     </includes>
                     <excludes>
                         <exclude>**/src/main/java/com/alipay/yaml/**</exclude>
@@ -279,11 +270,9 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.0</version>
+                <version>0.8.2</version>
                 <configuration>
                     <skip>${jacoco.skip}</skip>
-                    <destFile>${jacoco.path}</destFile>
-                    <dataFile>${jacoco.path}</dataFile>
                     <sessionId>jacoco_coverage</sessionId>
                     <excludes>
                         <!--dto-->
@@ -322,53 +311,19 @@
                         <exclude>**/com/alipay/test/acts/utils/config/**/*.class</exclude>
                         <exclude>**/com/alipay/test/acts/utils/DetailCollectUtils.class</exclude>
                     </excludes>
-                    <rules>
-                        <rule implementation="org.jacoco.maven.RuleConfiguration">
-                            <element>BUNDLE</element>
-                            <limits>　　
-                                <limit implementation="org.jacoco.report.check.Limit">
-                                    <counter>METHOD</counter>
-                                    <value>COVEREDRATIO</value>
-                                    <minimum>0.50</minimum>
-                                </limit>
-                                <limit implementation="org.jacoco.report.check.Limit">
-                                    <counter>BRANCH</counter>
-                                    <value>COVEREDRATIO</value>
-                                    <minimum>0.40</minimum>
-                                </limit>
-                                <limit implementation="org.jacoco.report.check.Limit">
-                                    <counter>CLASS</counter>
-                                    <value>MISSEDCOUNT</value>
-                                    <maximum>0</maximum>
-                                </limit>
-                            </limits>
-                        </rule>
-                    </rules>
                 </configuration>
                 <executions>
                     <execution>
-                        <id>pre-test</id>
-                        <phase>process-classes</phase>
+                        <id>default-prepare-agent</id>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
-                        <configuration>
-                            <propertyName>coverageAgent</propertyName>
-                        </configuration>
                     </execution>
-                    <!--coverage report-->
                     <execution>
                         <id>report</id>
-                        <phase>prepare-package</phase>
+                        <phase>test</phase>
                         <goals>
                             <goal>report</goal>
-                        </goals>
-                    </execution>
-                    <!--coverage check-->
-                    <execution>
-                        <id>check</id>
-                        <goals>
-                            <goal>check</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -386,13 +341,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.8.1</version>
-                <configuration>
-                    <argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m
-                        ${coverageAgent}</argLine>
-                    <includes>
-                        <include>**/*Test*.java</include>
-                    </includes>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -417,22 +365,6 @@
             </plugin>
         </plugins>
     </build>
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>findbugs-maven-plugin</artifactId>
-                <version>3.0.5</version>
-                <configuration>
-                    <xmlOutput>true</xmlOutput>
-                    <threshold>High</threshold>
-                    <effort>Default</effort>
-                    <relaxed>true</relaxed>
-                    <findbugsXmlOutput>true</findbugsXmlOutput>
-                </configuration>
-            </plugin>
-        </plugins>
-    </reporting>
     <profiles>
         <profile>
         <id>default</id>
